added related work section; fixed typo in fig. 1

--- a/EMNLP2014/bibliography.bib
+++ b/EMNLP2014/bibliography.bib
@@ -107,6 +107,15 @@ pages = {81--91},
  address = {Cambridge, MA, USA},
 }
 
+@inproceedings{Kneser1993,
+  author = {Kneser, Reinhard and Ney, Hermann},
+  booktitle = {In Proceedings of the European Conference on Speech Communication
+	and Technology (Eurospeech)},
+  title = {Improved clustering techniques for class-based statistical language
+	modeling},
+  year = 1993
+}
+
 @book{Golub1996,
  author = {Golub, Gene H. and Van Loan, Charles F.},
  title = {Matrix Computations (3rd Ed.)},
@@ -496,6 +505,17 @@ year = {2003}
   year={2010},
 }
 
+@InProceedings{Vaswani2011,
+  author    = {Vaswani, Ashish  and  Mi, Haitao  and  Huang, Liang  and  Chiang, David},
+  title     = {Rule Markov Models for Fast Tree-to-String Translation},
+  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
+  month     = {June},
+  year      = {2011},
+  address   = {Portland, Oregon, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {856--864},
+}
+
 @InProceedings{Bojar2013,
   author    = {Bojar, Ond\v{r}ej  and  Buck, Christian  and  Callison-Burch, Chris  and  Federmann, Christian  and  Haddow, Barry  and  Koehn, Philipp  and  Monz, Christof  and  Post, Matt  and  Soricut, Radu  and  Specia, Lucia},
   title     = {Findings of the 2013 {Workshop on Statistical Machine Translation}},
@@ -646,6 +666,19 @@ address = {Honolulu, USA},
 publisher = {Association for Computational Linguistics}
 }
 
+@inproceedings{Huang2010,
+ author = {Huang, Zhongqiang and \v{C}mejrek, Martin and Zhou, Bowen},
+ title = {{Soft syntactic constraints for hierarchical phrase-based translation using latent syntactic distributions}},
+ booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
+ series = {EMNLP '10},
+ year = {2010},
+ location = {Cambridge, Massachusetts},
+ pages = {138--147},
+ numpages = {10},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
 @InProceedings{Mylonakis2010,
 author = {Markos Mylonakis and Khalil Sima'an},
 title = {{Learning Probabilistic Synchronous {CFGs} for Phrase-based Translation}},
@@ -668,18 +701,6 @@ publisher = {Association for Computational Linguistics}
   pages     = {642--652},
 }
 
-@inproceedings{Huang2010,
- author = {Huang, Zhongqiang and \v{C}mejrek, Martin and Zhou, Bowen},
- title = {{Soft syntactic constraints for hierarchical phrase-based translation using latent syntactic distributions}},
- booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
- series = {EMNLP '10},
- year = {2010},
- location = {Cambridge, Massachusetts},
- pages = {138--147},
- numpages = {10},
- publisher = {Association for Computational Linguistics},
- address = {Stroudsburg, PA, USA},
-} 
 
 %%%%%%%%%%%%%%%%%%%
 %Morpho-MT
@@ -919,6 +940,21 @@ year = {2013},
   year      = {2003},
   pages     = {2945-2954},
 }
+
+@article{Blei2003,
+ author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.},
+ title = {Latent Dirichlet Allocation},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {3/1/2003},
+ volume = {3},
+ month = mar,
+ year = {2003},
+ issn = {1532-4435},
+ pages = {993--1022},
+ numpages = {30},
+ publisher = {JMLR.org},
+} 
+
 
 @article{Hardoon2004,
  author = {Hardoon, David R. and Szedmak, Sandor R. and Shawe-taylor, John R.},
