--- a/EMNLP2014/bibliography.bib
+++ b/EMNLP2014/bibliography.bib
@@ -1669,18 +1669,24 @@ Eprint = {arXiv:1310.4546},
   url       = {http://www.aclweb.org/anthology/D13-1014}
 }
 
+@inproceedings{cohen-12c,
+    author = "S. B. Cohen and M. Collins",
+    title = "Tensor Decomposition for Fast Parsing with Latent-Variable {PCFGs}",
+    booktitle = "Proceedings of NIPS",
+    year = "2012"
+}
 
+@inproceedings{cohen-13a,
+    author = "S. B. Cohen and G. Satta and M. Collins",
+    title = "Approximate PCFG Parsing Using Tensor Decomposition",
+    booktitle = "Proceedings of {NAACL}",
+    year = "2013"
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+@article{cohen-14b,
+    author = "S. B. Cohen and K. Stratos and M. Collins and D. P. Foster and L. Ungar",
+    title = "Spectral Learning of Latent-Variable {PCFGs}: Algorithms and Sample Complexity",
+    journal = "Journal of Machine Learning Research",
+    year = "2014"
+}
 
