--- a/EMNLP2014/bibliography.bib
+++ b/EMNLP2014/bibliography.bib
@@ -48,6 +48,23 @@ pages = {81--91},
   year = { 1949}
 }
 
+@article{Lewis1968,
+ author = {Lewis,II, P. M. and Stearns, R. E.},
+ title = {Syntax-Directed Transduction},
+ journal = {J. ACM},
+ issue_date = {July 1968},
+ volume = {15},
+ number = {3},
+ month = jul,
+ year = {1968},
+ issn = {0004-5411},
+ pages = {465--488},
+ numpages = {24},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
 @ARTICLE{Dempster1977,
     author = {A. P. Dempster and N. M. Laird and D. B. Rubin},
     title = {{Maximum likelihood from incomplete data via the EM algorithm}},
