--- a/EMNLP2014/emnlp2014.tex
+++ b/EMNLP2014/emnlp2014.tex
@@ -76,7 +76,8 @@
 \newenvironment{itemizesquish}{\begin{list}{\setcounter{enumi}{0}\labelitemi}{\setlength{\itemsep}{-0.25em}\setlength{\labelwidth}{0.5em}\setlength{\leftmargin}{\labelwidth}\addtolength{\leftmargin}{\labelsep}}}{\end{list}}
 \usepackage{color}
 \newcommand{\cjd}[1]{\textcolor{red}{\textbf{[#1 --CJD] }}}
-
+\newcommand{\shaycomment}[1]{\textcolor{blue}{#1 -- Shay}}
+\newcommand{\avcomment}[1]{\textcolor{orange}{\textbf{[#1 -- Av]}}}
 \newcommand{\ignore}[1]{}
 
 % You can expand the titlebox if you need extra space
@@ -84,7 +85,7 @@
 % smaller than 5cm (the original size); we will check this
 % in the camera-ready version and ask you to change it back.
 %\setlength\titlebox{5cm} %for expanding the title box
-\title{Latent Synchronous CFGs for Hierarchical Translation}
+\title{Latent Variable Synchronous CFGs for Hierarchical Translation}
 
 %\author{First Author \\
 %  Affiliation / Address line 1 \\
@@ -99,7 +100,7 @@
 
 \date{}
 
-\newcommand{\shaycomment}[1]{\textcolor{blue}{#1 -- Shay}}
+
 
 \begin{document}
 \maketitle
@@ -108,20 +109,25 @@
 \end{abstract}
 
 \section{Introduction}
-Introduction goes here. 
-%Statistical approaches to machine translation (MT) have achieved state-of-the-art results in many typologically diverse language pairs \cite{Bojar2013} by learning translation rules over longer multiword units or phrases (e.g., French $\rightarrow$ English: \emph{un chien Andalou} $\rightarrow$ \emph{an Andalusian dog}), instead of lexical or word units (\emph{chien} $\rightarrow$ \emph{dog}).  
-%Unfortunately, phrase-based translation contains its own set of issues. 
-%A prominent one is the significant increase in model size due to phrasal units, which makes parameter estimation during training a challenge and significantly slows slows down decoding during test time. 
-%The phrasal extraction heuristics that extract phrase pairs consistent with word-level alignments are often to blame, since there is a tendency to extract longer length phrasal translation units that are mainly applicable in restricted settings, e.g., phrase pairs like the German-English pair `\emph{der Amerikanische Pr{\"a}sident $\rightarrow$ convention allows the American president}'.  
-%However, it has been found that such translation units actually perform better than their minimal counterparts \cite{Galley2006}, primarily because they are more in-line with the kinds of independence assumptions we make with context-free grammar formalisms: with larger rules, right-hand side productions can be generated in a relatively context-independent manner.  
+Statistical approaches to machine translation (MT) have achieved state-of-the-art results in many typologically diverse language pairs \cite{Bojar2013} by learning translation rules over longer multiword units or phrases (e.g., French $\rightarrow$ English: \emph{un chien Andalou} $\rightarrow$ \emph{an Andalusian dog}), instead of lexical or word units (\emph{chien} $\rightarrow$ \emph{dog}).  
+On top of these phrase-based approaches, the use of synchronous grammar-based formalisms \cite{Lewis1968} allows syntactic information to be explicitly incorporated in the translation process, either by taking into account both structural and categorical information \cite{Galley2004,Zollmann2006}, e.g., the rule \emph{EXAMPLE} or only structural information in the form of single-category grammars \cite{Chiang2005}, e.g., the rule \emph{EXAMPLE}.  
 
-%In this work, we propose to model additional context via a latent variable model that is featurized over inside and outside sub-trees of a synchronous grammar.  
-%Using a low-rank representation of the feature cross-product space (informally, the space that intuitively captures interactions of feature functions defined over inside and outside sub-trees), we can associate an additional set of parameters for each rule, representing the distribution over latent states. 
-%Unlike the expectation maximization (EM) algorithm, an iterative procedure based on maximum likelihood estimation that often gets stuck in local optima, our approach utilizes a spectrally-motivated moments-based method to estimate parameters of the latent variable model, which offers a more scalable way to estimate the millions of parameters in our model.   
-%During decoding, these states are marginalized yielding a context-dependent likelihood for each rule, which can then be incorporated as an additional feature in the standard MT pipeline.  
+Single-category grammars work well in some circumstances.
+Their use alleviates data sparseness issues, allows the option of building partial translations that can then be combined serially, and eliminates the need for a noisy domain-specific parser.   
+However, by using only one category significant amounts of syntactic and context-specific information is discarded. 
+For example, the English word \emph{plant} can translate in Spanish to both \emph{f{\'a}brica} (a factory) or \emph{plantar} (i.e., to plant a tree), depending on the part-of-speech on the English side.  
+Therefore, a natural question is how we can refine synchronous grammars with learned latent categories that capture certain context-specific syntactic regularities, but without the use of hard syntactic constraints from a parser.  
+
+In this work, we propose to refine the synchronous grammars used in MT by incorporating additional context via a latent variable model featurized over inside and outside sub-trees of synchronous derivation trees for source-target sentence pairs.  
+We first generalize the concept of latent PCFGs to latent variable SCFGs (\S\ref{sec:formalism}), followed by a presentation of the tensor-based formulation for our parameters, a representation that makes it convenient to marginalize over latent states.  
+Subsequently, two methods for parameter estimation are presented (\S\ref{sec:estimation}): a spectral approach based on the method of moments, and an EM-based likelihood maximization approach.  
+Results on synthetic data and a Chinese-English evaluation set (\S\ref{sec:evaluation}) indicate significant gains over baselines and point to the promise of using latent variable synchronous grammars in conjunction with a smaller, simpler set of rules instead of unwieldy and bloated grammars extracted via existing heuristics, where a large number of context-independent but un-generalizable rules are obtained.  
+
+Hence, the hope is that this work promotes the move towards translation models that directly model the conditional likelihood of translation rules via (potentially feature-rich) latent variable models which leverage information contained in the synchronous tree structure, instead of relying on the heuristic relative frequency parameter estimates \cite{Koehn2003} from non-hierarchical phrase-based translation.  
 
 \section{Latent Variable Models for Refinement}
-The contribution of this paper is an algorithm for learning an implicit refinement of nonterminal categories in synchronous context-free grammar (SCFG), using a latent variable model.  
+The contribution of this paper is an algorithm for learning an implicit refinement of non-terminal categories in synchronous context-free grammar (SCFG), using a latent variable model.  
+\avcomment{shouldn't we say the contribution is more general, i.e., an approach? We present 2 algorithms for parameter estimation.}
 We first introduce latent-variable synchronous context-free grammars (L-SCFGs) and discuss how we acquire training examples of synchronous parse trees from word alignments, followed by a summary of the decoding algorithm for marginalizing over latent states, as it provides a natural way to introduce the data structures and representations used for the latent parameters.  
 The decoder is based on simple tensor-vector products that sum over the latent states.  
 Two methods to estimate the parameters will be discussed in \S\ref{sec:estimation}. 
@@ -129,30 +135,30 @@ Two methods to estimate the parameters will be discussed in \S\ref{sec:estimatio
 \subsection{Latent-Variable SCFGs}
 \label{sec:formalism}
 We extend the definition of L-PCFGs \cite{Matsuzaki2005,Petrov2006} to synchronous grammars as used in machine translation \cite{Galley2004,Chiang2005}. 
-In this work, the aim is to refine the one-category grammar introduced by \newcite{Chiang2005} for hierarchical phrase-based translation (HPBT) in an effort to incorporate additional translational context via refined non-terminal (NT) categories instead of longer translation rules.  
+In this work, the aim is to refine the one-category grammar introduced by \newcite{Chiang2005} for hierarchical phrase-based translation (HPBT) in order to incorporate additional translational context via refined non-terminal (NT) categories instead of longer translation rules.  
 Thus, the following discussion is restricted to these kinds of grammars, although the method is equally applicable in other scenarios, e.g., the extended tree-to-string transducer ({\bf xRs}) formalism \cite{Huang2006,Graehl2008} commonly used in syntax-directed translation.  
 An important point to keep in mind in comparison to L-PCFGs is that the right-hand side (RHS) non-terminals of synchronous rules are aligned pairs across the source and target languages.  
 
 A latent SCFG (L-SCFG) is a 6-tuple $(\mathcal{N}, m, n_s, n_t, \pi, t)$ where: 
 \begin{itemizesquish}
   \item $\mathcal{N}$ is a set of non-terminal symbols in the grammar.  
-  	For phrase based machine translation, the set consists of only two symbols, \bX~and a goal symbol \bS.  
+  	For HPBT, the set consists of only two symbols, \bX~and a goal symbol \bS.  
   \item $[m]$ is the set of possible hidden states associated with NTs.  
   	Aligned pairs of NTs across the source and target languages share the same hidden state.
 	%In line with previous work, we assume that the states associated with NTs on the RHS are \emph{not} conditionally independent given the latent state of the left-hand side (LHS).  
    \item $[n_s]$ is the set of source side words, i.e., the source-side vocabulary, with $[n_s] \cap \mathcal{N} = \emptyset$.
    \item $[n_t]$ is the set of target side words, i.e., the target-side vocabulary, with $[n_t] \cap \mathcal{N} = \emptyset$.
    \item The synchronous production rules compose a set $\rules = \rules_0 \cup \rules_1 \cup \rules_2$:
-$\bullet$ Binary rules ($\rules_0$): $$a(h_1) \rightarrow \langle \alpha_1 b(h_2) \alpha_2 c(h_3) \alpha_3, \beta_1 b(h_2) \beta_2 c(h_3) \beta_3 \rangle$$ or $$a(h_1) \rightarrow \langle \alpha_1 b(h_2) \alpha_2 c(h_3) \alpha_3, \beta_1 c(h_2) \beta_2 b(h_3) \beta_3 \rangle$$ where $a,b,c \in \mathcal{N}$, $h_1,h_2,h_3 \in [m]$, $\alpha_1,\alpha_2,\alpha_3 \in [n_s]^{\ast}$ and $\beta_1,\beta_2,\beta_3 \in [n_t]^{\ast}$.
+   
+$\bullet$ Binary rules ($\rules_2$): $$a(h_1) \rightarrow \langle \alpha_1 b(h_2) \alpha_2 c(h_3) \alpha_3, \beta_1 b(h_2) \beta_2 c(h_3) \beta_3 \rangle$$ or $$a(h_1) \rightarrow \langle \alpha_1 b(h_2) \alpha_2 c(h_3) \alpha_3, \beta_1 c(h_2) \beta_2 b(h_3) \beta_3 \rangle$$ where $a,b,c \in \mathcal{N}$, $h_1,h_2,h_3 \in [m]$, $\alpha_1,\alpha_2,\alpha_3 \in [n_s]^{\ast}$ and $\beta_1,\beta_2,\beta_3 \in [n_t]^{\ast}$.
 
-$\bullet$ Preterminal rules ($\rules_1$): $$a(h_1) \rightarrow \langle \alpha_1 b(h_2) \alpha_2, \beta_1 b(h_2) \beta_2$$ where $a,b \in \mathcal{N}$, $h_1,h_2 \in [m]$, $\alpha_1,\alpha_2 \in [n_s]^{\ast}$ and $\beta,\beta_2 \in [n_t]^{\ast}$. They are associated with parameters 
+$\bullet$ Preterminal rules ($\rules_1$): $$a(h_1) \rightarrow \langle \alpha_1 b(h_2) \alpha_2, \beta_1 b(h_2) \beta_2$$ where $a,b \in \mathcal{N}$, $h_1,h_2 \in [m]$, $\alpha_1,\alpha_2 \in [n_s]^{\ast}$ and $\beta,\beta_2 \in [n_t]^{\ast}$. 
 
-$\bullet$ Terminal rules ($\rules_2$): $a(h_1) \rightarrow \langle \alpha, \beta \rangle$ where $a \in \mathcal{N}$, $\alpha \in [n_t]^{\ast}$ and $\beta \in [n_s]^{\ast}$.
+$\bullet$ Terminal rules ($\rules_0$): $a(h_1) \rightarrow \langle \alpha, \beta \rangle$ where $a \in \mathcal{N}$, $\alpha \in [n_t]^{\ast}$ and $\beta \in [n_s]^{\ast}$.
 
-Each of these rules is associated with a probability $t(a(h_1) \rightarrow \gamma | a, h_1)$ where $\gamma$ is the right handside of the rule.
+Each of these rules is associated with a probability $t(a(h_1) \rightarrow \gamma | a, h_1)$ where $\gamma$ is the right-hand side (RHS) of the rule.
 
 \ignore{
-
 For $a =\bX, b \in [n_s] \cup \mathcal{N} \setminus \{\bS\}, c \in [n_t]
      \cup \mathcal{N} \setminus \{\bS\}, h_1, h_2, h_3 \in [m]$, we have the following context-free rules, based on the number of NT symbols \bX~in the RHS of the rule:
      \begin{itemize}
@@ -165,36 +171,40 @@ For $a =\bX, b \in [n_s] \cup \mathcal{N} \setminus \{\bS\}, c \in [n_t]
 	   	$a(h_1) \rightarrow ~ \langle b, c,\sim \rangle$, with associated parameter $t(a \rightarrow b,c | a, h_1)$
         \end{itemize}
 }
-
-
          \item For $a \in \mathcal{N}$, $h \in [m]$, $\pi(a, h)$ is a parameter specifying the root probability of $a(h)$. 
+		 \avcomment{isn't it technically just $a = S$ for start of sentence?}
 \end{itemizesquish}
-A skeletal tree (s-tree) for a sentence is a sequence of rules $r_1, \dots, r_N$ where each $r_i$ is of the form of one of the synchronous context-free rules above.\cjd{left most rewrite, relative to the source language? actually, isn't it easiest just to say it's the rules in a synchronous derivation, not decorated with latent state info?} 
-A full tree consists of an s-tree $r_1, \dots, r_N$ together with values $h_1, \dots, h_N$.  
+%A skeletal tree (s-tree) for a sentence is a sequence of rules $r_1, \dots, r_N$ where each $r_i$ is of the form of one of the synchronous context-free rules above.\cjd{left most rewrite, relative to the source language? actually, isn't it easiest just to say it's the rules in a synchronous derivation, not decorated with latent state info?} 
+A skeletal tree (s-tree) for a sentence is the set of rules in the synchronous derivation of that sentence, without any additional latent state information or decoration.  
+A full tree consists of an s-tree $r_1, \dots, r_N$ together with values $h_1, \dots, h_N$ for every NT in the tree.  
 %In HPBT, where only rules with at most two NTs in the RHS are used, the set of rules obtained from the training corpus $\rules$ can be further divided into three non-overlapping sets $\rules_0, \rules_1, \rules_2 \in \rules$, containing the pre-terminal, unary, and binary rules respectively.   
 
 \subsection{Minimal Grammar Extraction}
 \label{sec:mingrammar}
-To estimate the parameters $t$ of an L-SCFG, a dataset composed of synchronous s-trees is required.\cjd{not required, but we assume we have it for simplicity's sake. we need to make clear what our assumptions are up front because this is quite different from how parameters are usually learned in translation models}
-We acquire these derivations from word alignments. 
+To estimate the parameters $t$ and $\pi$ of an L-SCFG, we assume the existence of a dataset composed of synchronous s-trees, which can be acquired from word alignments.  
+Normally in phrase-based translation models, we consider all possible phrase pairs consistent with the word alignments and estimate features based on surface statistics associated with the phrase pairs or rules. 
+The weights of these features are then learned using some kind of discriminative training algorithm \cite{Och2003,Chiang2012}.  
+%a dataset composed of synchronous s-trees is required.\cjd{not required, but we assume we have it for simplicity's sake. we need to make clear what our assumptions are up front because this is quite different from how parameters are usually learned in translation models}
+In contrast, we restrict the number of possible synchronous derivations for each sentence pair to just one; thus, derivation forests do not have to be considered, making parameter estimation more tractable.  
 
+To achieve this objective, for each sentence in the training data we extract the {\bf minimal} set of synchronous rules consistent with the word alignments, as opposed to the {\bf composed} set of rules.  
+Composed rules are ones that can be formed out of smaller rules in the grammar; with these rules, there are multiple synchronous trees consistent with the alignments for a given sentence pair, and thus the total number of applicable rules can be combinatorially larger than if we just consider the set of rules that cannot be formed from other rules, namely the minimal rules.  
+The rule types across all sentence pairs are combined to form a minimal grammar.\footnote{In our experiments (\S\ref{sec:data}), a grammar extracted using the traditional Hiero heuristics was more than 80 times larger than the minimal grammar.} 
 
-\shaycomment{
-I want to rephrase your text below, because it does not make it clear that we are using minimal rules.
-I am confused about the process though, is it that the Gildea algorithm extracts a minimal grammar or synchronous s-trees?
-Can you also roughly describe how the algorithm works in a few key sentences?}
-
-
-In order to learn the parameters $t$, we need a set of synchronous s-trees, which can be acquired from word alignments.  
+%\shaycomment{
+%I want to rephrase your text below, because it does not make it clear that we are using minimal rules.
+%I am confused about the process though, is it that the Gildea algorithm extracts a minimal grammar or synchronous s-trees?
+%Can you also roughly describe how the algorithm works in a few key sentences?}
+%In order to learn the parameters $t$, we need a set of synchronous s-trees, which can be acquired from word alignments.  
 %For each rule $r_i$ in each s-tree, we can either compute partial counts in the expectation step of the EM algorithm, or extract second-order moments of features on which we compute an SVD.  
-During the extraction phase, if we consider {\bf composed} rules, namely rules that can be formed out of smaller rules in the grammar, then there are multiple synchronous trees consistent with the alignments for a given sentence pair, and thus the total number of applicable rules can be combinatorially larger than if we just consider the set of {\bf minimal} rules i.e., rules that cannot be formed from other rules. 
-
+%During the extraction phase, if we consider {\bf composed} rules, namely rules that can be formed out of smaller rules in the grammar, then there are multiple synchronous trees consistent with the alignments for a given sentence pair, and thus the total number of applicable rules can be combinatorially larger than if we just consider the set of {\bf minimal} rules i.e., rules that cannot be formed from other rules. 
 To extract a set of minimal rules for each word-aligned sentence pair, we utilize the linear-time extraction algorithm of \newcite{Zhang2008}.  
-Since the algorithm extracts one minimal tree for each sentence pair, derivation forests do not have to be considered, making parameter estimation more tractable.\footnote{For our \textsc{DE-EN} corpus (\S\ref{sec:data}), a grammar extracted using the traditional heuristics was more than 80 times larger than the minimal grammar.} 
-Furthermore, by using minimal rules as a starting point instead of the traditional heuristically-extracted rules \cite{Chiang2005} or arbitrary compositions of minimal rules \cite{Galley2006}, we are also able to explore the transition from minimal rules to composed ones in a principled manner by encoding contextual information through the latent states.   
+This algorithm generalizes an approach for finding all common intervals (a pair of phrases such that no word pair in the alignment links a word inside the phrase to a word outside the phrase) between two permutations to sequences with many-to-many alignment links between the two sides, as in word alignment. 
+\avcomment{Should we talk about how rules with $>$ 2 NTs in the RHS are generated, and how we handle?}
+By using minimal rules as a starting point instead of the traditional heuristically-extracted rules \cite{Chiang2005} or arbitrary compositions of minimal rules \cite{Galley2006}, we are also able to explore the transition from minimal rules to composed ones in a principled manner by encoding contextual information through the latent states.   
 Thus, a beneficial side effect of our refinement process is the creation of more context-specific rules without increasing the overall size of the grammar.
 \cjd{make sure to cite Marino et al, operation sequence model, the Trevor Cohn Bayesian Markov sequence translation model, etc. they all make similar assumptions}
-
+\avcomment{OK, let me look at these papers tomorrow and put in the relevant shout-outs then.  Seems like you're implying it's better to cite them here than in Related because of the similar assumptions.}
 \subsection{Decoding}
 \label{sec:decoding} 
 \begin{figure}[h!]
@@ -271,7 +281,7 @@ A slight simplification in the marginal computation yields NT marginals for span
 \vspace{-0.8cm}
 \label{fig:hg_io_spec}
 \end{figure}
-For a parameter $t$ of rule $r$, the latent state $h_1$ attached to the LHS NT of $r$ is associated with the outside tree for the sub-tree rooted at the LHS, and the states attached to the RHS NTs are associated with the inside trees of that NT.    
+For a parameter $t$ of rule $r$, the latent state $h_1$ attached to the left-hand side (LHS) NT of $r$ is associated with the outside tree for the sub-tree rooted at the LHS, and the states attached to the RHS NTs are associated with the inside trees of that NT.    
 Since we do not assume conditional independence of these states, we need to consider all possible interactions, which can be compactly represented as a 3\ts{rd}-order tensor in the case of a binary rule, a matrix (i.e., a 2\ts{nd}-order tensor) for unary rules, and a vector for pre-terminal (lexical) rules.  
 Preferences for certain outside-inside tree combinations are reflected in the values contained in these tensor structures.  
 In this manner, we intend to capture interactions between non-local context, as represented by the outside tree, and local context, through the inside trees. 
@@ -291,8 +301,11 @@ It is similar to the version presented in \newcite{cohen-14b}, but adapted to hy
 The complexity of this decoding algorithm is $\mathcal{O}(n^3 m^3 |G|)$ where $n$ is the length of the input sentence, $|G|$ is the number of production rules in the grammar (without latent-variable annotations), and $m$ is the number of latent states.
 %The algorithm maintains its $\mathcal{O}(n^3|G|)$ complexity where $n$ is the length of the input sentence and $|G|$ is the size of the grammar; \shaycomment{what do you mean by the following? increase the number of rules compared to what? the grammar size is the same as what?} we do not increase the number of rules at all, so the grammar size is the same. 
 %But of course, there is no free lunch, and the additional computation gets shifted to the marginalization over latent states via the algorithm in Figure \ref{fig:hg_io_spec}.  
-The bulk of the computation is a series of tensor-vector products of relatively small size (each dimension is of length $m$), which can be computed very quickly and in parallel \shaycomment{are we really parallelizing the decoding, or you are just suggesting that it is somehow possible? what can be done in a parallel manner?}. In addition, these tensor computations can be significantly
-sped up using techniques described by Cohen and Collins (2012) and Cohen et al. (2013)\nocite{cohen-12c,cohen-13a}, only adapted to S-CFGs.  
+The bulk of the computation is a series of tensor-vector products of relatively small size (each dimension is of length $m$), which can be computed very quickly and in parallel.
+%\shaycomment{are we really parallelizing the decoding, or you are just suggesting that it is somehow possible? what can be done in a parallel manner?}
+\avcomment{we really are parallelizing the decoding, but I'm parallelizing at the level of sentences.  What I meant here is that each tensor-vector dot product can be parallelized in that the dot product along each dimension can be computed at the same time, which is how most matrix multiplication packages work right?} 
+In addition, these tensor computations can be significantly
+sped up using techniques described by Cohen and Collins (2012) and Cohen et al. (2013)\nocite{cohen-12c,cohen-13a}, but adapted to S-CFGs.  
 
 \section{Parameter Estimation for L-SCFGs}
 \label{sec:estimation}
@@ -401,16 +414,17 @@ A function $\phi$ that maps inside trees $t$ to feature-vectors $\phi(t) \in \re
 		\end{itemize}
 		\item Maximization Step
 			\begin{itemize}[label={},nolistsep]%[nolistsep]
-				\item if $r \in \rules_0$: $\forall h_1: \e{C}^r(h_1) = \frac{\e{C}^r(h_1)}{\sum_{h_1}\e{C}^r(h_1)}$ 
-				\item if $r \in \rules_1$: $\forall h_1, h_2: \e{C}^r(h_1, h_2) = \frac{\e{C}^r(h_1, h_2)}{\sum_{h_2}\e{C}^r(h_1, h_2)}$ 
-				\item if $r \in \rules_2$: $\forall h_1, h_2, h_3: \e{C}^r(h_1, h_2, h_3) = \frac{\e{C}^r(h_1, h_2, h_3)}{\sum_{h_2, h_3}\e{C}^r(h_1, h_2, h_3)}$ 
+				\item if $r \in \rules_0$: $\forall h_1: \e{C}^r(h_1) = \frac{\e{C}^r(h_1)}{\sum_{r'=r, h_1}\e{C}^{r'}(h_1)}$ 
+				\item if $r \in \rules_1$: $\forall h_1, h_2: \e{C}^r(h_1, h_2) = \frac{\e{C}^r(h_1, h_2)}{\sum_{r'=r, h_2}\e{C}^{r'}(h_1, h_2)}$ 
+				\item if $r \in \rules_2$: $\forall h_1, h_2, h_3: \e{C}^r(h_1, h_2, h_3) = \frac{\e{C}^r(h_1, h_2, h_3)}{\sum_{r'=r,h_2, h_3}\e{C}^{r'}(h_1, h_2, h_3)}$ 
+				%NEED TO MENTION NORMALIZATION FOR PI PARAMETERS
 			\end{itemize}
 	\end{itemize}		
 	\caption{\small The EM-based algorithm for estimating parameters of an L-SCFG.}
 	\label{fig:emlearn}	
 	\end{subfigure}		
 	\end{footnotesize}}
-	\caption{The two parameter estimation algorithms proposed for L-SCFGs.$\odot$ is the element-wise multiplication operator}
+	\caption{The two parameter estimation algorithms proposed for L-SCFGs. $\odot$ is the element-wise multiplication operator}
 	\label{fig:estimation-algos}
 \end{figure*}
 
@@ -455,10 +469,12 @@ The expectation step thus consists of computing the partial counts of inside and
 Each partial count's contribution is divided by a normalization factor $g$, which is the total probability of the tree which $t$ or $o$ is part of.  
 Note that unlike the spectral case, there is a specific normalization factor for each inside-outside tuple. 
 Lastly, the correlations are scaled by the existing parameter estimates.
-To obtain the next set of parameters, in the maximization step we normalize $\e{C}^r$ for $r \in \rules$ such that for every $h_1, \sum_{h_2,h_3} \e{C}^r(h_1, h_2, h_3) = 1$ for $r \in \rules_2$, $\sum_{h_2} \e{C}^r(h_1, h_2) = 1$ for $r \in \rules_1$, and $\sum_{h_2} \e{C}^r(h_2) = 1$ for $r \in \rules_0$.  
+
+To obtain the next set of parameters, in the maximization step we normalize $\e{C}^r$ for $r \in \rules$ such that for every $h_1, \sum_{r'=r,h_2,h_3} \e{C}^{r'}(h_1, h_2, h_3) = 1$ for $r \in \rules_2$, $\sum_{r'=r,h_2} \e{C}^{r'}(h_1, h_2) = 1$ for $r \in \rules_1$, and $\sum_{r'=r,h_2} \e{C}^{r'}(h_2) = 1$ for $r \in \rules_0$.  
 We note that it is also possible to add sparse, overlapping features to an EM-based estimation procedure \cite{Berg-Kirkpatrick2010} and leave this for future work.  
 
 \section{Evaluation}
+\label{sec:evaluation}
 To evaluate the performance of L-SCFGs in a translation setting, we looked at several experiments across two language pairs.  
 The primary criterion of evaluation was BLEU \cite{Papineni2002}, and we evaluate our latent variable model against a number of baselines to elucidate its performance.  
 The latent variable model is integrated into the standard MT pipeline by computing marginal probabilities for each rule in the parse forest of a source sentence using the algorithm in Figure \ref{fig:hg_io_spec} with the parameters estimated through the algorithms in Figure \ref{fig:estimation-algos}, and is added as a feature for the rule during MERT \cite{Och2003}.  
@@ -467,13 +483,12 @@ We also write out as features the conditional probabilities $P(e|f)$ and $P(f|e)
 
 \subsection{Data and Baselines}
 \label{sec:data}
-The \textsc{DE-EN} parallel corpus is taken from the news commentary section of the WMT 2012 translation evaluation; \textsc{news-test2010} is used as the development set, and \textsc{news-test2011} is the test set.\footnote{http://www.statmt.org/wmt12/}
-The development and test sets are evaluated with a single reference.    
+%The \textsc{DE-EN} parallel corpus is taken from the news commentary section of the WMT 2012 translation evaluation; \textsc{news-test2010} is used as the development set, and \textsc{news-test2011} is the test set.\footnote{http://www.statmt.org/wmt12/}
+%The development and test sets are evaluated with a single reference.    
 The \textsc{ZH-EN} data is the BTEC parallel corpus \cite{Paul2009}; we combine the first and second development sets in one, and evaluate on the third development set.   
 The development and test sets are evaluated with 16 references.  
 Statistics for the data are shown in Table \ref{tab:corpusstats}.  
 We used the \textsc{cdec} decoder \cite{Dyer2010} to extract word alignments and the baseline hierarchical grammars, for MERT tuning, and decoding.  
-%For the in-sample conditional perplexity experiments, we used a 4-gram language model .  
 We used a 4-gram language model built from the target-side of the parallel training data.  
 \begin{table}[h!]
 %{\small
@@ -512,21 +527,62 @@ We use the following set of sparse, binary features in the spectral learning pro
 	%\item Arity: the number of non-terminals present in inside tree and outside tree rules.  
 	\item Length: the span length of the tree and each of its children for inside features, and the span length of the parent and sibling for outside features. 	
 \end{itemize}
-In addition to the sparse features, we also investigate the inclusion of real-valued features that are traditionally used in MT, e.g., lexical and phrasal forward and reverse probabilities. 
+%In addition to the sparse features, we also investigate the inclusion of real-valued features that are traditionally used in MT, e.g., lexical and phrasal forward and reverse probabilities. 
 
-\subsection{\textsc{DE-EN} Experiments}
-
-Table \ref{tab:de-en-results} presents a comprehensive evaluation of the \textsc{DE-EN} experimental setup.  
+\subsection{\textsc{ZH-EN} Experiments}
+Table \ref{tab:zh-en-results} presents a comprehensive evaluation of the \textsc{ZH-EN} experimental setup.  
 The first section consists of the various baselines we consider. 
 In addition to the standard HPBT setup \cite{Chiang2005}, we evaluate the minimal grammar baseline with the same set of features, as well as a setup where the spectral parameters simply consist of the joint maximum likelihood estimates of the rules.  
-This baseline, along with the $m=1$ spectral baseline with only rule indicator features, should perform \emph{en par} with the minimal grammar baseline, which we see is the case.  
-Furthermore, in line with previous work \cite{Galley2006} which compares minimal and composed rules, we find that minimal grammars take a hit of almost 1.5 BLEU points compared to composed (\textsc{hiero}) grammars.  
+This baseline should perform \emph{en par} with the minimal grammar baseline, which we see is the case on the development set.  
+%Discuss improvement on test set in terms of P(f|e)? 
+Furthermore, in line with previous work \cite{Galley2006} which compares minimal and composed rules, we find that minimal grammars take a hit of more than 2.5 BLEU points on the development set, compared to composed (\textsc{hiero}) grammars.  
+The $m=1$ spectral baseline with only rule indicator features performs slightly better than the minimal grammar baseline, since it overtly takes into account inside-outside tree combination preferences in the parameters, but improvement is minimal with one latent state naturally and the performance on the test set is in line with the MLE baseline.  
 
-We look at a number of feature combinations and latent states for the spectral and EM-estimated latent variable models.  
+\begin{table}[t!]
+\begin{small}
+  \begin{center}
+    \begin{tabular}{|l|p{0.45\columnwidth}rr|}
+      \hline
+	  & & \multicolumn{2}{c|}{\bf BLEU} \\
+      & Setup & Dev & Test \\
+	  \hline
+	  \multirow{3}{*}{Baselines} & \textsc{hiero} & 46.08 & 55.31 \\
+      & Minimal Grammar & 43.38 & 51.78 \\
+	  & MLE & 43.24 & 52.80 \\ \hline
+	  \multirow{4}{*}{Spectral} &  $m=1$ RI & 44.18 & 52.62 \\
+	  & $m=8$ RI & 44.60 & 53.63 \\
+	  & $m=16$ RI & 46.06 & 55.83 \\
+	  & $m=16$ RI+Lex+Sm & X & Y \\ 
+	  & $m=16$ RI+Lex+Len & 45.7 & 55.29 \\ 
+	  & $m=24$ RI+Lex & 43 & 51.28 \\ 
+	  & $m=32$ RI+Lex & 43.06 & 52.16 \\ \hline
+	  \multirow{2}{*}{EM} & $m=8$ X Iter & 38.61 & 46.62 \\
+	  & $m=16$ X Iter & 42.45 & 53.16 \\
+	  & $m=24$ X Iter & 41.33 & 51.55 \\
+	  & $m=32$ X Iter & X & Y \\
+	  \hline
+	\end{tabular}
+  \end{center}
+  \caption{Results for the \textsc{ZH-EN} corpus, comparing across the baselines and the two parameter estimation techniques.
+  RI, Lex, and Len correspond to the rule indicator, lexical, and length features respectively, and Sm denotes smoothing.
+  For the EM experiments, we selected the best scoring iteration by tuning weights for parameters obtained after 25 iterations and evaluating other parameters with these weights. }
+  \label{tab:zh-en-results}
+\end{small}
+\end{table}
+
+On top of the baselines, we looked at a number of feature combinations and latent states for the spectral and EM-estimated latent variable models.  
+Firstly, we can see a clear dependence on rank, with peak performance for the spectral and EM models occurring at $m=16$. 
+In this instance, the spectral model roughly matches the performance of the \textsc{hiero} baseline, but only building on top of a minimal grammar.  
+The gains seem to level off at this rank; additional ranks seem to add noise to the parameters. 
+Feature-wise, additional lexical and length features add little, probably because much of this information is encapsulated in the rule indicator features. 
+For EM, $m=16$ outperforms the minimal grammar baseline, but is not at the level of the spectral results.  
 
 The two estimation algorithms differ significantly in their estimation time.  
-The spectral algorithm is an at least an order of magnitude faster: it completes within 40 minutes on a single core, while a parallelized EM implementation would take around 100 iterations to achieve this level of performance, taking more than 10 hours.  
+The spectral algorithm is one or two orders magnitude faster: it completes the entire estimation process in the same time that EM takes for one or two iterations. 
 
+\ignore{
+\subsection{\textsc{DE-EN} Experiments}
+Table \ref{tab:de-en-results} presents a comprehensive evaluation of the \textsc{DE-EN} experimental setup.  
 \begin{table}[t!]
 \begin{small}
   \begin{center}
@@ -551,10 +607,13 @@ The spectral algorithm is an at least an order of magnitude faster: it completes
   RI, Lex, and Len correspond to the rule indicator, lexical, and length features respectively, and Sm denotes smoothing.}
   \label{tab:de-en-results}
 \end{small}
-\end{table}
-\subsection{\textsc{ZH-EN} Experiments}
+\end{table}}
 
 \subsection{Discussion \& Analysis}
+
+\avcomment{To include here: maybe 1 or 2 sentences with heatmaps across EM, Spectral, and MLE.}
+\avcomment{Also, 1 or 2 sentences where the 1-best hypothesis looks quite different between the various setups.}
+\avcomment{Lastly, may also want to discuss effective grammar size numbers here.}
 
 \section{Related Work}
 \label{sec:related}
@@ -575,6 +634,7 @@ We base our parameter estimation algorithm on the follow-up work of \newcite{Coh
 %Other latent variable models like latent Dirichlet allocation \cite{Blei2003} have also been tackled spectrally \cite{Anandkumar2012}.  
 
 The question of whether we can incorporate additional contextual information in minimal rule grammars in MT via auxiliary models instead of using longer, composed rules has been investigated \cite{Vaswani2011}, but in the context of tree-to-string translation. 
+\avcomment{Add additional citations recommended by Chris here.}
 Their model uses a Markov model where the parameters are Kneser-Ney smoothed \cite{Kneser1993}, while in our instance we capture this smoothing effect through low rank or latent states.  
 
 \section{Conclusion}
